--- a/footerStyles.css
+++ b/footerStyles.css
@@ -38,22 +38,21 @@
   /* Footer Text */
   .footer .contactInfo 
   {
-    align-items: center;
     display: flex;
+    flex-wrap: wrap;
     font-size: calc(1vw + 0.5vh);
     word-spacing: 1px;
-    gap: 1vw;
   }
 
-  .footer .contactInfo .text
+  .footer .contactInfo .item
   {
-    height: 10%;
-    transition: background-color 0.5s ease-out;
+    display: flex;
+    align-items: center;
+    transition: color 0.5s ease-out;
   }
 
   .highlight 
   {
     color: yellow; /* Change text color to highlight */
-    transition: color 10s ease-out;
   }
 
