--- a/headerStyles.css
+++ b/headerStyles.css
@@ -17,20 +17,20 @@
   
   padding: 1vw 10vw;
   color: white;
-  font-family: OPTIBaskerVille;
+  font-family: CascadiaMono;
 }
 
 /* Title */
 .header .title 
 {
   flex-grow: 1;
-  font-size: calc(2vw + 1vh);
+  font-size: calc(1.5vw + 0.5vh);
 }
 
 .header .title .button
 {
   flex-grow: 1;
-  font-size: calc(2vw + 1vh);
+  font-size: calc(1.5vw + 0.5vh);
   cursor: pointer;
 }
 
@@ -47,8 +47,8 @@
   
   color: white;
   background-color: transparent; /* Transparent background */
-  font-size: calc(1vw + 0.5vh);
-  font-family: OPTIBaskerVille;
+  font-size: calc(0.75vw + 0.25vh);
+  font-family: CascadiaMono;
 }
 .header .button:hover 
 {
