--- a/projectsStyles.css
+++ b/projectsStyles.css
@@ -5,7 +5,6 @@
  /* Body */
  body 
  {
-  font-family: OPTIBaskerVille;
   background-color: black;
  }
  body, html 
@@ -20,7 +19,7 @@
    padding: 0;
 
    overflow-x: hidden; /* Prevent horizontal scrolling */
-   overflow-y: scroll; /* Enable vertical scrolling */
+   overflow-y: auto; /* Enable vertical scrolling */
  }
 
 .content 
