--- a/codeSampleStyles.css
+++ b/codeSampleStyles.css
@@ -5,6 +5,8 @@
  /* Body */
  body 
  {
+  transform: scale(1);
+  transform-origin: top left;
   background-color: black;
  }
  body, html 
@@ -54,8 +56,8 @@
   color: white; /* Text color */
   background-color: rgb(24, 24, 24); /* Background color */
 
-  border: 1px solid white; /* White border */
-  border-radius: 4px; /* Rounded corners */
+  border: 0.01vw solid white; /* White border */
+  border-radius: 0.5vw; /* Rounded corners */
   
   font-size:  calc(0.52vw + 0.22vh);;
   overflow-x: auto; /* Allow horizontal scrolling for long lines of code */
@@ -82,6 +84,19 @@
   font-size: calc(0.75vw + 0.25vh);
   color: white;
   white-space: pre-wrap;
+}
+
+.codeDescription ul 
+{
+  list-style: disc; /* Ensure consistent bullet points */
+  padding: 0;
+  margin: 0;
+}
+.codeDescription li 
+{
+  margin: 0;
+  padding: 0;
+  margin-left: 2vw;
 }
 
 .codeDescription .inset
