--- a/projectsStyles.css
+++ b/projectsStyles.css
@@ -4,7 +4,9 @@
 
  /* Body */
  body 
- {
+ {  
+  transform: scale(1);
+  transform-origin: top left;
   background-color: black;
  }
  body, html 
@@ -24,9 +26,12 @@
 
 .content 
 {
-  height: 200px; /* For demonstration, making the page long enough to scroll */
-  margin-top: 80px; /* Give space for the fixed header */
-  padding: 20px;
+  height: 10vh;
+  margin-top: 1vh; 
+
+  margin: 0;
+  padding: 0;
+
 
   flex-grow: 1;
 
@@ -42,20 +47,13 @@
  {
    position: relative; top: 0; left: 0;
  }
- .videoContainer .video 
- {
-   position: relative; top: 0; left: 0;
-   width: 100%;
-   height: 100%;
-   object-fit: cover; /* Ensures the video fills the screen without distortion */
-   z-index: -2; /* Place the video behind other content */
- }
+
  .videoContainer video 
  {
-   width: 100%;
-   height: 100%;
+  position: relative; top: 0; left: 0;
+  width: 100%;
+  height: 100%;
 
-   object-fit: cover; /* Ensures the video fills the screen without distortion */
    z-index: -2; /* Place the video behind other content */
  }
  .videoContainer .videoCover
@@ -67,14 +65,14 @@
    object-fit: cover; 
    z-index: -1; /* Place the video behind other content */
 
-   background-color: rgba(0, 0, 0, 0.5); /* Blue with 50% opacity */
+   background-color: rgba(1, 1, 0, 0.5);
    color: black;
  }
  .videoContainer .videoImage img 
  {
-  position: absolute; top: 13%; left: 32%;
+  position: absolute; top: 8vw; left: 32vw;
 
-  height: 30%;
+  width: 35vw;
 
   padding: 0;
   margin: 0;
@@ -102,7 +100,7 @@
 
   width: 100%;
 
-  position: absolute; top: 65%; left: 50%;
+  position: absolute; top: 35vw; left: 49.7vw;
   transform: translate(-50%, -50%); /* Centers the text horizontally and vertically */
 
   text-align: center;
