--- a/headerStyles.css
+++ b/headerStyles.css
@@ -24,14 +24,8 @@
 .header .title 
 {
   flex-grow: 1;
-  font-size: calc(1.5vw + 0.5vh);
-}
-
-.header .title .button
-{
-  flex-grow: 1;
-  font-size: calc(1.5vw + 0.5vh);
-  cursor: pointer;
+  /*font-size: calc(1.5vw + 0.5vh);*/
+  font-size: calc(1.2vw + 0.4vh + 0.5rem);
 }
 
 /* Buttons */
@@ -47,7 +41,8 @@
   
   color: white;
   background-color: transparent; /* Transparent background */
-  font-size: calc(0.75vw + 0.25vh);
+  /*font-size: calc(0.75vw + 0.25vh);*/
+  font-size: calc(0.6vw + 0.2vh + 0.4rem);
   font-family: CascadiaMono;
 }
 .header .button:hover 
