--- a/footerStyles.css
+++ b/footerStyles.css
@@ -7,7 +7,8 @@
     position: relative; bottom: 0; left: 50%;
     transform: translateX(-50%); /* Centers the footer horizontally */
     width: 95%;
-    height: calc(1.25vw + 1.25vh);
+    /*height: calc(1.25vw + 1.25vh);*/
+    height: calc(1.125vw + 1.125vh + 0.4rem);
   
     display: flex;
     justify-content: space-between;
@@ -42,9 +43,10 @@
   .footer .contactInfo 
   {
     display: flex;
-    flex-wrap: wrap;
     /*font-size: calc(0.75vw + 0.25vh);*/
     font-size: calc(0.6vw + 0.2vh + 0.4rem);
+    overflow-x: hidden;
+    white-space: nowrap
   }
 
   .footer .contactInfo .item
