--- a/headerStyles.css
+++ b/headerStyles.css
@@ -5,9 +5,8 @@
 /* Header */
 .header 
 {
-  position: fixed; top: 0; left: 50%;
-  transform: translateX(-50%); /* Centers the header horizontally */
-  width: 95%;
+  position: sticky; top: 0; left: 0;
+  width: 98.1%;
 
   align-items: center;
   justify-content: space-between;
@@ -15,7 +14,11 @@
   display: inline-flex;
   z-index: 10; /* Ensure the header stays on top */
   
-  padding: 1vw 10vw;
+  padding-left: 1vw;
+  padding-right: 10vw;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+
   color: white;
   font-family: CascadiaMono;
 }
@@ -26,13 +29,14 @@
   flex-grow: 1;
   /*font-size: calc(1.5vw + 0.5vh);*/
   font-size: calc(1.2vw + 0.4vh + 0.5rem);
+  white-space: nowrap
 }
 
 /* Buttons */
 .header .buttons 
 {
   display: flex;
-  gap: 1.2vw;
+  gap: 1.0vw;
 }
 .header .button 
 {
@@ -42,7 +46,7 @@
   color: white;
   background-color: transparent; /* Transparent background */
   /*font-size: calc(0.75vw + 0.25vh);*/
-  font-size: calc(0.6vw + 0.2vh + 0.4rem);
+  font-size: calc(0.54vw + 0.18vh + 0.36rem);
   font-family: CascadiaMono;
 }
 .header .button:hover 
