--- a/projects/knightLight/knightLightStyles.css
+++ b/projects/knightLight/knightLightStyles.css
@@ -21,12 +21,11 @@
    padding: 0;
 
    overflow-x: hidden; /* Prevent horizontal scrolling */
-   overflow-y: auto; /* Enable vertical scrolling */
+   overflow-y: hidden; /* Enable vertical scrolling */
  }
 
 .content 
 {
-  height: 10vh;
   margin-top: 1vh; 
 
   margin: 0;
@@ -42,7 +41,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 200px); /* Adjust for header and footer heights */
+  height: 100%;
   position: relative;
   transform: rotate(-25deg);
 }
