Cashing why do you hate me so

--- a/projects/knightLight/knightLightStyles.css
+++ b/projects/knightLight/knightLightStyles.css
@@ -42,6 +42,9 @@
   height: 100%;
   position: relative;
   transform: rotate(-25deg);
+
+  overflow-x: hidden
+  overflow-y: hidden;
 }
 
 .content img 
