--- a/fonts.css
+++ b/fonts.css
@@ -8,7 +8,20 @@
   src: url('../media/fonts/CascadiaMono.woff');
 }
 
-@font-face {
+@font-face 
+{
   font-family: 'WebsitePixel';
   src: url('../media/fonts/websitepixelfont.woff');
+}
+
+@font-face 
+{
+  font-family: 'kalam';
+  src: url('../media/fonts/Kalam.woff');
+}
+
+@font-face 
+{
+  font-family: 'kalamBold';
+  src: url('../media/fonts/Kalam-Bold.woff');
 }
