--- a/projects/projectsStyles.css
+++ b/projects/projectsStyles.css
@@ -24,20 +24,6 @@
    overflow-y: auto; /* Enable vertical scrolling */
  }
 
-.content 
-{
-  height: 10vh;
-  margin-top: 1vh; 
-
-  margin: 0;
-  padding: 0;
-
-
-  flex-grow: 1;
-
-  color: white;
-}
-
 /* ------------------------------------------------------------------------------ */
 /* ---------------------------------Video Styles--------------------------------- */
 /* ------------------------------------------------------------------------------ */
@@ -46,6 +32,8 @@
  .videoContainer
  {
    position: relative; top: 0; left: 0;
+   height: auto;
+   width: auto;
  }
 
  .videoContainer video 
@@ -56,6 +44,7 @@
 
    z-index: -2; /* Place the video behind other content */
  }
+
  .videoContainer .videoCover
  {
    position: absolute; top: 0; left: 0;
@@ -80,31 +69,44 @@
 
   position: absolute; top: 0; left: 50%;
   transform: translateX(-50%);
-  width: calc(30vw + 8vh + 6rem);
+  width: calc(30vw + 4vh + 3rem);
   margin-top: 3vw;
   height: auto;
  }
 
  .videoContainer .videoContent img 
  {
-  width: calc(30vw + 8vh + 6rem);
-
+  width: 100%;
   padding: 0;
   border: none;
   align-items: center;
+}
+
+.videoContainer .videoContent .buttonStuff
+{
+  width: calc(15vw + 2vh + 1.5rem);
+  height: calc((15vw + 2vh + 1.5rem) * 0.333006856);
+  
+  position: relative; left: 50%; 
+  transform: translateX(-50%);
+  justify-content: center;
+  margin-top: 15vw;
 }
 
 .videoContainer .videoContent button
 {
   cursor: pointer;
   border: none;
+
+  width: 100%;
+  height: 100%;
+
   background-color: transparent; /* Transparent background */
   color: white;
   font-family: WebsitePixel;
 
   position: relative; top: 50%; left: 50%; 
   transform: translate(-50%, -50%);
-  margin-top: 15vw;
 
   justify-content: center;
   text-align: center;
@@ -115,8 +117,151 @@
   line-height: 1.5;
 }
 
+.videoContainer .videoContent button img 
+{
+  padding: 0;
+  border: none;
+  align-items: center;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: -1;
+}
+
+.videoContainer .videoContent button .buttonText
+{
+  margin: 0;
+  padding: 0;  
+
+  position: absolute; top: 50%; left: 50%; 
+  transform: translate(-50%, -50%);
+
+  width: min-content;
+  height: min-content;
+}
+
 .videoContainer .videoContent button:hover 
 {
   background-color: transparent; /* Transparent background */
   opacity: 0.7;
+}
+
+/* ------------------------------------------------------------------------------ */
+/* ---------------------------------Image Styles--------------------------------- */
+/* ------------------------------------------------------------------------------ */
+
+ /* Image */
+ .imageContainer
+ {
+   position: relative; top: 0; left: 0;
+   height: auto;
+   width: auto;
+ }
+
+ .imageContainer .image 
+ {
+  position: relative; top: 0; left: 0;
+
+   z-index: -2; /* Place the image behind other content */
+ }
+
+ .imageContainer .imageCover
+ {
+   position: absolute; top: 0; left: 0;
+   width: 100%;
+   height: 100%;
+
+   object-fit: cover; 
+   z-index: -1; /* Place the image behind other content */
+
+   background-color: rgba(1, 1, 0, 0.15);
+   color: black;
+ }
+ 
+ .imageContainer .imageContent
+ {
+  border: none;
+  
+  color: white;
+  background-color: transparent; /* Transparent background */
+ 
+  height: auto;
+
+  position: absolute; top: 0; left: 50%;
+  transform: translateX(-50%);
+  width: calc(35vw + 5vh + 3rem);
+  margin-top: 4vw;
+  height: auto;
+ }
+
+ .imageContainer .imageContent img 
+ {
+  width: 100%;
+  padding: 0;
+  border: none;
+  align-items: center;
+}
+
+.imageContainer .imageContent .buttonStuff
+{
+  width: calc(15vw + 2vh + 1.5rem);
+  height: calc((15vw + 2vh + 1.5rem) * 0.4647519582);
+  
+  position: relative; left: 50%; 
+  transform: translateX(-50%);
+  justify-content: center;
+  margin-top: 10vw;
+}
+
+.imageContainer .imageContent button
+{
+  cursor: pointer;
+  border: none;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: transparent; /* Transparent background */
+  color: white;
+  font-family: WebsitePixel;
+
+  position: relative; top: 50%; left: 50%; 
+  transform: translate(-50%, -50%);
+
+  justify-content: center;
+  text-align: center;
+  white-space: nowrap;
+
+  /*font-size: calc(1.5vw + 0.5vh);*/
+  font-size: calc(1.35vw + 0.45vh + 0.25rem);
+  line-height: 1.5;
+}
+
+.imageContainer .imageContent button img 
+{
+  padding: 0;
+  border: none;
+  align-items: center;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: -1;
+}
+
+.imageContainer .imageContent button .buttonText
+{
+  margin: 0;
+  padding: 0;  
+
+  position: absolute; top: 50%; left: 50%; 
+  transform: translate(-50%, -50%);
+
+  width: min-content;
+  height: min-content;
+}
+
+.imageContainer .imageContent button:hover 
+{
+  background-color: transparent; /* Transparent background */
+  opacity: 0.8;
 }
