--- a/projects/knightlight/knightLightStyles.css
+++ b/projects/knightlight/knightLightStyles.css
@@ -4,11 +4,10 @@
 
  /* Body */
  body 
- {  
+ {
   transform: scale(1);
   transform-origin: top left;
   background-color: black;
-  overflow-y: hidden;
  }
  body, html 
  {
@@ -22,46 +21,99 @@
    padding: 0;
 
    overflow-x: hidden; /* Prevent horizontal scrolling */
+   overflow-y: auto; /* Enable vertical scrolling */
  }
 
-.content 
+.content
 {
-  margin-top: 1vh; 
-  margin: 0;
-  padding: 0;
-
-  flex-grow: 1;
-
-  color: white;
-
-  z-index: -10;
-
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  position: relative;
-  transform: rotate(-25deg);
+  justify-content: space-between;
+  gap: 2vw; /* Add some space between the boxes */
+  flex-wrap: nowrap; /* Ensure content stays in a single row */
 }
 
-.content img 
+.mediaSection
 {
-  position: absolute;
-  width: 130%;
+  height: auto; /* Adjust height dynamically based on content */
+  width: 50%; /* Set width to 50% of the screen */
+  padding: 1vw 1vh; /* Add padding inside the box */
+  margin-top: 0.1vh;
+  margin-bottom: 3vh;
+  margin-left: 1.5vw;
+
+  color: white; /* Text color */
+
+  /*font-size:  calc(0.52vw + 0.22vh);*/
+  font-size: calc(0.364vw + 0.154vh + 0.35rem);
+  overflow-x: auto; /* Allow horizontal scrolling for long lines of code */
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  z-index: 2;
+}
+
+.mediaSection .media
+{
+  position: relative; left: 50%; 
+  transform: translateX(-50%);
+}
+
+.mediaImage
+{
+  width: 100%;
   height: auto;
 }
 
-.content img:first-child 
+.gameDescription
 {
-  transform: rotate(35deg);
+  width: 50%;
+  font-family: CascadiaMono;
+  margin-left: 1vw;
+  margin-right: 1.5vw;
+  margin-top: 1vw;
+  margin-bottom: 0;
+  font-size: calc(0.75vw + 0.25vh);
+  font-size: calc(0.50vw + 0.15vh + 0.35rem);
+  color: white;
+  white-space: pre-wrap;
+  line-height: 1.5;
 }
 
-.content .textoverlay 
+.gameDescription ul 
 {
-  position: absolute;
-  font-family: WebsitePixel;
-  font-size: calc(1.2vw + 0.4vh + 0.5rem);
-  font-weight: bold;
-  color: white;
-  text-align: center;
+  list-style: disc; /* Ensure consistent bullet points */
+  padding: 0;
+  margin: 0;
+}
+.gameDescription li 
+{
+  margin: 0;
+  padding: 0;
+  margin-left: 2vw;
+}
+
+.gameDescription .inset
+{
+  margin-left: 1vw;
+}
+
+.gameDescription .inset .insetDeep
+{
+  margin-left: 2vw;
+}
+
+.gameDescription h3 
+{
+  margin: 0 0;
+}
+.gameDescription p 
+{
+  margin: 0 0;
+}
+.gameDescription ul 
+{
+  margin: 0 0;
+}
+.gameDescription code 
+{
+  margin: 0 0;
+  font-family: "Courier New", Courier, monospace;
 }
