--- a/about/aboutStyles.css
+++ b/about/aboutStyles.css
@@ -39,7 +39,7 @@
   width: 50%;
   margin-left: 1.5vw;
   margin-right: 0;
-  margin-top: 0;
+  margin-top: 15vw;
   margin-bottom: 0;
 }
 
@@ -48,7 +48,7 @@
   width: 25%;
   margin-left: 40%;
   margin-right: 0;
-  margin-top: 11vw;
+  margin-top: 11w;
   margin-bottom: 0;
 }
 
