--- a/projects/sprouttown/sproutTownStyles.css
+++ b/projects/sprouttown/sproutTownStyles.css
@@ -1,14 +1,13 @@
 /* ------------------------------------------------------------------------------ */
-/* ------------------------------SproutTown Styles------------------------------- */
+/* ------------------------------Sprout Town Styles------------------------------ */
 /* ------------------------------------------------------------------------------ */
 
  /* Body */
  body 
- {  
+ {
   transform: scale(1);
   transform-origin: top left;
   background-color: black;
-  overflow-y: hidden;
  }
  body, html 
  {
@@ -22,46 +21,111 @@
    padding: 0;
 
    overflow-x: hidden; /* Prevent horizontal scrolling */
+   overflow-y: auto; /* Enable vertical scrolling */
  }
 
-.content 
+h1, h2, h3 
 {
-  margin-top: 1vh; 
   margin: 0;
+  margin-top: 1vw;
   padding: 0;
-
-  flex-grow: 1;
-
-  color: white;
-
-  z-index: -10;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  position: relative;
-  transform: rotate(-25deg);
 }
 
-.content img 
+.content
 {
-  position: absolute;
-  width: 130%;
+  display: flex;
+  justify-content: space-between;
+  gap: 2vw; /* Add some space between the boxes */
+  flex-wrap: nowrap; /* Ensure content stays in a single row */
+}
+
+.mediaSection
+{
+  height: auto; /* Adjust height dynamically based on content */
+  width: 40%; /* Set width to 50% of the screen */
+  padding: 1vw 1vh; /* Add padding inside the box */
+  margin-top: 0.1vh;
+  margin-bottom: 3vh;
+  margin-left: 1.5vw;
+
+  color: white; /* Text color */
+
+  /*font-size:  calc(0.52vw + 0.22vh);*/
+  font-size: calc(0.364vw + 0.154vh + 0.35rem);
+  overflow-x: auto; /* Allow horizontal scrolling for long lines of code */
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  z-index: 2;
+}
+
+.mediaSection .media
+{
+  position: relative; left: 50%; 
+  transform: translateX(-50%);
+}
+
+.mediaImage
+{
+  width: 100%;
   height: auto;
 }
 
-.content img:first-child 
+.bold
 {
-  transform: rotate(35deg);
+  font-size: calc((0.50vw + 0.15vh + 0.35rem) * 1.3);
+  font-weight: bold;
+}
+.boldmini
+{
+  font-weight: bold;
 }
 
-.content .textoverlay 
+.italics
 {
-  position: absolute;
-  font-family: WebsitePixel;
-  font-size: calc(1.2vw + 0.4vh + 0.5rem);
-  font-weight: bold;
+  font-style: italic;
+}
+
+.gameDescription
+{
+  width: 60%;
+  font-family: CascadiaMono;
+  margin-left: 1vw;
+  margin-right: 1.5vw;
+  margin-top: 1vw;
+  margin-bottom: 0;
+  font-size: calc(0.50vw + 0.15vh + 0.35rem);
   color: white;
-  text-align: center;
+  line-height: 1.5;
+}
+
+.gameDescriptionImage
+{
+  position: relative;
+  float: right;
+  height: auto;
+}
+
+.gameDescription ul 
+{
+  list-style: disc; /* Ensure consistent bullet points */
+  padding: 0;
+  margin: 0;
+}
+.gameDescription li 
+{
+  margin: 0;
+  padding: 0;
+  margin-left: 2vw;
+}
+
+.gameDescription h3 
+{
+  margin: 0 0;
+}
+.gameDescription p 
+{
+  margin: 0 0;
+}
+.gameDescription ul 
+{
+  margin: 0 0;
 }
