--- a/headerStyles.css
+++ b/headerStyles.css
@@ -41,7 +41,7 @@
 {
   flex-grow: 1;
   /*font-size: calc(1.5vw + 0.5vh);*/
-  font-size: calc(1.2vw + 0.4vh + 0.5rem);
+  font-size: calc((1.7vw + 0.3vh));
   white-space: nowrap
 }
 
@@ -59,7 +59,7 @@
   color: white;
   background-color: transparent; /* Transparent background */
   /*font-size: calc(0.75vw + 0.25vh);*/
-  font-size: calc(0.65vw + 0.18vh + 0.36rem);
+  font-size: calc(1vw + 0.55vh);
   font-family: CascadiaMono;
 }
 .header .button:hover 
