--- a/showcase/showcaseStyles.css
+++ b/showcase/showcaseStyles.css
@@ -15,19 +15,17 @@ body
 .projects 
 {
   margin: 0 auto;
-  padding: 50px 20px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 /* Each project section */
 .project 
 {
   display: flex;
-  align-items: top;
-  justify-content: space-between;
-  margin-bottom: 25px;
-  margin-top: 25px;
-  flex-wrap: wrap;
-  overflow: hidden;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 /* Text area */
@@ -38,11 +36,25 @@ body
   margin-left: 0.3vw;
   margin-right: 0.3vw;
 }
+
+.project-text .gameDescriptionImage 
+{
+  width: 25%;
+}
+
+.project-text .image-row 
+{
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
 .project-text h2 
 {
   font-family: 'CascadiaMono';
   color: white;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  margin-top:  0;;
   font-size: 2vw;
 }
 .project-text p 
@@ -54,22 +66,23 @@ body
 /* Video container */
 .project-video 
 {
-  margin: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
   flex: 1;
-  height: 30vw;
-  position: relative;
 }
 .project-video iframe 
 {
+  height: calc(13.6vw + 32vh); /* Adjust height dynamically based on content */
   width: 100%;
-  height: 100%;
   border: none;
 }
 
 /* Alternate layout: video on right */
 .project.reverse 
 {
+  display: flex;
   flex-direction: row-reverse;
+  margin-bottom: 15px;
 }
 
 /* Responsive adjustments */
