--- a/showcase/showcaseStyles.css
+++ b/showcase/showcaseStyles.css
@@ -28,6 +28,14 @@ body
   margin-top: 30px;
 }
 
+.projectReversed
+{
+  display: flex;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  flex-direction: row-reverse;
+}
+
 /* Text area */
 .project-text 
 {
@@ -39,14 +47,16 @@ body
 
 .project-text .gameDescriptionImage 
 {
-  width: 25%;
+  width: 28%;
 }
 
 .project-text .image-row 
 {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 2rem;
   width: 100%;
+  box-sizing: border-box;
 }
 
 .project-text h2 
@@ -69,26 +79,24 @@ body
   margin-left: 30px;
   margin-right: 30px;
   flex: 1;
+  margin-bottom: 10px;
 }
 .project-video iframe 
 {
   height: calc(13.6vw + 32vh); /* Adjust height dynamically based on content */
   width: 100%;
   border: none;
-}
-
-/* Alternate layout: video on right */
-.project.reverse 
-{
-  display: flex;
-  flex-direction: row-reverse;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 /* Responsive adjustments */
 @media (max-width: 900px) 
 {
   .project 
+  {
+    flex-direction: column;
+  }
+  .projectReversed 
   {
     flex-direction: column;
   }
